[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claudelib"
version = "0.0.1"
authors = [
    { name = "Taylor Price" },
]
description = "A package that handles mapping between openai chat completions and claude"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "anthropic",
    "xmltodict",
    "boto3",
    "openai",
    "fastapi",
]

[project.urls]
Homepage = "https://github.com/gptscript-ai/claudelib"
Issues = "https://github.com/gptscript-ai/claudelib/issues"