[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude3_provider_common"
version = "0.0.1"
authors = [
    { name = "Taylor Price" },
]
description = "A package that handles mapping between openai chat completions and claude"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "anthropic[bedrock]",
    "xmltodict",
    "openai",
    "fastapi",
]

[project.urls]
Homepage = "https://github.com/gptscript-ai/claude3_provider_common"
Issues = "https://github.com/gptscript-ai/claude3_provider_common/issues"